--- a/my-bookstore/package.json
+++ b/my-bookstore/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "my-bookstore",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -9,7 +9,9 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
-    "lint": "eslint . --fix",
+    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
+    "lint:eslint": "eslint . --fix",
+    "lint": "run-s lint:*",
     "format": "prettier --write src/"
   },
   "dependencies": {
@@ -25,9 +27,11 @@
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.21.0",
+    "eslint-plugin-oxlint": "^0.15.13",
     "eslint-plugin-vue": "~10.0.0",
     "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
+    "oxlint": "^0.15.13",
     "prettier": "3.5.3",
     "typescript": "~5.8.0",
     "vite": "^6.2.1",
